# XWorld

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  data_packet.cpp  data_packet.h  export_vars.sh  memory_util.h  py_task.cpp  simulator.cpp  simulator.h  simulator_communication.cpp  simulator_communication.h  simulator_entity.h  simulator_interface.cpp  simulator_interface.h  simulator_util.cpp  simulator_util.h  teacher.cpp  teacher.h  teacher_sentence_generator.cpp  teacher_sentence_generator.h  teaching_task.cpp  teaching_task.h  world_scanner.cpp  world_scanner.h
examples/: CMakeLists.txt  demo_interface.cpp  test_atari.cpp  test_atari.sh  test_simple_race.cpp  test_simple_race.sh  test_xworld.cpp  test_xworld.sh  test_xworld3d.cpp  test_xworld3d.sh  test_xworld_dialog.cpp  test_xworld_dialog.sh
games/minecraft/: CMakeLists.txt  minecraft_simulator.cpp  minecraft_simulator.h  minecraft_simulator_base.h  minecraft_simulator_demo.cpp
games/roboschool/: CMakeLists.txt  robo_simulator.cpp  robo_simulator.h
games/xworld3d/: CMakeLists.txt  README.md  download_3d_models.sh  obj_normalize.py  pack_models_3d.sh  x3item.cpp  x3item.h  x3scene.cpp  x3scene.h  xworld3d.cpp  xworld3d.h  xworld3d_flags.cpp  xworld3d_flags.h  xworld3d_parser.cpp  xworld3d_parser.h  xworld3d_simulator.cpp  xworld3d_simulator.h  xworld3d_simulator_impl.h
games/xworld3d/confs/: dialog3d.json  empty_ground.json  navigation.json
games/xworld3d/dicts/: lang_dict.txt
games/xworld3d/maps/: XWorld3DDialogMap.py  XWorld3DNav.py  XWorldNav.py  xworld3d_env.py
games/xworld3d/models_3d/: properties.txt
games/xworld3d/tasks/: XWorld3DDialog.py  XWorld3DNavTarget.py  XWorld3DNavTargetAvoid.py  XWorld3DNavTargetBetween.py  XWorld3DNavTargetDirection.py  XWorld3DNavTargetDistance.py  (+6 more)
python/: CMakeLists.txt  context_free_grammar.py  maze2d.py  py_gflags.cpp  py_init.cpp  py_simulator.cpp  py_util.py
python/examples/: demo_conf.xml  empty_ground.json  test_atari.py  test_deepmind_lab.py  test_map.lua  test_minecraft.py  test_minecraft_simulator.py  test_simple_game.py  test_simple_race.py  test_xworld.py  test_xworld3d.py  test_xworld3d_dialog.py  test_xworld_simulator.py
tests/: CMakeLists.txt  deepmind_lab_map.lua  test_binary_buffer.cpp  test_deepmind_lab_simulator.cpp  test_robo_simulator.cpp  test_simple_game_simulator.cpp  test_simulator_seed.cpp  test_statepacket.cpp  test_teacher_sentence_generator.cpp  test_xworld_parser.cpp  test_xworld_task.cpp
xrobot/: AABB.h  API.md  CMakeLists.txt  FBO.cpp  FBO.h  Queue.h  README.md  camera.h  crowd.cpp  crowd.h  depth.fs  depth.vs  download_data.sh  gl_context.cpp  gl_context.h  inventory.cpp  inventory.h  lidar.h  map.cpp  map.h  map_grid.cpp  map_grid.h  map_suncg.cpp  map_suncg.h  mesh.h  model.cpp  model.h  navigation.cpp  navigation.h  py_nav_agent_task.py  py_nav_task.py  py_random_task.py  py_suncg_task.py  py_test_env.py  python_binding.cpp  python_binding.h  render.h  render2d.h  room_generator.cpp  shader.h  (+24 more)
xrobot/apple/: apple.urdf
xrobot/bed_1/: BLENDSWAP_LICENSE.txt
xrobot/bullet_engine/: CMakeLists.txt  bullet_body.cpp  bullet_body.h  bullet_joint.cpp  bullet_joint.h  bullet_object.cpp  bullet_object.h  bullet_world.cpp  bullet_world.h  common.cpp  common.h
xrobot/cat_1/: cat.urdf
xrobot/cmake/: FindGlog.cmake  assimp.cmake  bullet.cmake  glfw.cmake  glm.cmake
xrobot/cpp_example/: assets.h  example_navigation_in_maze.cpp  example_navigation_in_suncg.cpp  navigation_in_maze.cpp  navigation_in_maze.h  navigation_in_suncg.cpp  navigation_in_suncg.h  task_example_crowd.cpp  task_example_crowd.h  task_example_follow_robot.cpp  task_example_follow_robot.h  task_example_navigation_in_maze.cpp  task_example_navigation_in_maze.h  task_example_obj.cpp  task_example_obj.h  task_example_suncg.cpp  task_example_suncg.h  test_crowd.cpp  test_follow_robot.cpp  test_navigation_in_maze.cpp  test_obj.cpp  test_suncg.cpp  xrobot_test_crowd  xrobot_test_follow_robot  xrobot_test_nav  xrobot_test_obj  xrobot_test_suncg
xrobot/crate_0.3/: crate.mtl
xrobot/floor0/: floor.urdf  stadium.mtl
xrobot/game_engine/: CMakeLists.txt  inventory.cpp  inventory.h  lidar.cpp  lidar.h  map.h  map_grid.cpp  map_grid.h  map_suncg.h  navigation.cpp  navigation.h  python_binding.cpp  python_binding.h  robot.cpp  state_machine.cpp  world.cpp  world.h
xrobot/pool-table_1/: pool-table.urdf
xrobot/python/: py_benchmark.py  py_nav_agent_task.py  py_nav_task.py  py_random_task.py  py_suncg_task.py  py_taskgroup_navigation.py  py_taskgroup_suncg.py  py_test_env.py  run_navigation.sh  run_python_benchmark.sh  run_python_navigation.sh  run_suncg_house.sh  teaching_task.py
xrobot/python_example/: CutCake.sh  Dialog.py  Dialog.sh  NavTarget.sh  NavTargetAvoid.sh  NavTargetBetween.sh  NavTargetInMaze.sh  NavTargetInSUNCG.sh  NavTargetNear.sh  NavTargetPickup.sh  README.md  StackBox.sh  XWorld3DCutCake.py  XWorld3DNavTarget.py  XWorld3DNavTargetAvoid.py  XWorld3DNavTargetBetween.py  XWorld3DNavTargetInMaze.py  XWorld3DNavTargetInSUNCG.py  XWorld3DNavTargetNear.py  XWorld3DNavTargetPickup.py  XWorld3DStackBox.py  context_free_grammar.py  py_benchmark.py  py_cfg_test.py  py_interaction_task.py  py_movebox_task.py  py_mpi.py  py_nav_agent_task.py  py_nav_task.py  py_objmtl.py  py_random_task.py  py_suncg_task.py  py_taskgroup_cfg.py  py_taskgroup_interaction.py  py_taskgroup_movebox.py  py_taskgroup_navagent.py  py_taskgroup_navigation.py  run_cfg.sh  run_interaction.sh  run_movebox.sh  (+3 more)
xrobot/render_engine/: CMakeLists.txt  bloom.h  camera.cpp  camera.h  capture.cpp  capture.h  common.h  composite.cpp  composite.h  csm.cpp  csm.h  fbo.cpp  fbo.h  frustum.cpp  frustum.h  fxaa.cpp  fxaa.h  gl_context.cpp  gl_context.h  gl_header.h  mesh.cpp  mesh.h  model.cpp  model.h  postprocess.cpp  postprocess.h  render.cpp  render.h  render2d.cpp  render2d.h  render_target.cpp  render_target.h  render_utils.cpp  render_utils.h  render_world.cpp  render_world.h  shader.cpp  shader.h  ssao.cpp  ssao.h  (+10 more)
xrobot/shaders/: flat.fs  lambert.fs  line.vs
(+462 files in other folders)
