add_executable(test_statepacket
  test_statepacket.cpp)
link_simulator_test(test_statepacket)
add_test(simulator_test_statepacket test_statepacket)

add_executable(test_binary_buffer
  test_binary_buffer.cpp)
link_simulator_test(test_binary_buffer)
add_test(simulator_test_binary_buffer test_binary_buffer)

add_executable(test_simple_game_simulator
  test_simple_game_simulator.cpp)
link_simulator_test(test_simple_game_simulator)
add_test(simulator_test_simple_game test_simple_game_simulator)

add_executable(test_simulator_seed
  test_simulator_seed.cpp)
link_simulator_test(test_simulator_seed)
add_test(simulator_test_simulator_seed test_simulator_seed)
